--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -8,6 +8,7 @@
   align-content: center;
   z-index: 1;
   position: relative;
+  text-decoration: none;
 }
 
 .cover__background::after {
@@ -20,4 +21,27 @@
   background: #2A2C2F;
   opacity: 0.3;
   z-index: -1;
+}
+
+.cover__background:hover::after {
+  opacity: 0.8;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1279px) {
+  .cover__background {
+    min-height: 640px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__background {
+    min-height: calc(100vw/1.6);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__background {
+    min-height: calc(100vw/1.6);
+  }
 }
