--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,3 +9,12 @@
   width: 360px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 767px) {
+  .cover__subtitle {
+    margin: 16px auto 0;
+    font-size: 14px;
+    line-height: 16px;
+    width: 288px;
+  }
+}
