--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,3 +9,39 @@
   margin: 295px auto 32px;
   width: 560px;
 }
+
+@media screen and (max-width: 1279px) {
+  .cover__title {
+    margin: 195px auto 32px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .cover__title {
+    margin: 115px auto 32px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__title {
+    margin: 80px auto 16px;
+  }
+}
+
+@media screen and (max-width: 631px) {
+  .cover__title {
+    margin: 60px auto 16px;
+    font-size: 48px;
+    line-height: 51px;
+    width: 350px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .cover__title {
+    margin: 33px auto 16px;
+    font-size: 32px;
+    line-height: 35px;
+    width: 288px;
+  }
+}
