--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -7,3 +7,14 @@
   color: #FFFFFF;
   text-decoration: none;
 }
+
+.footer__link:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 767px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
