--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,3 +3,11 @@
   justify-content: flex-start;
   gap: 18px;
 }
+
+@media screen and (max-width: 767px) {
+  .footer__links {
+    flex-direction: column;
+    align-content: flex-start;
+    gap: 32px;
+  }
+}
