--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,11 +2,26 @@
   display: flex;
   justify-content: space-between;
   align-content: flex-end;
-  width: calc(100% - (48px*2));
+  max-width: 1184px;
 }
 
-@media screen and (min-width: 1281px) {
+@media screen and (max-width: 1279px) {
   .footer {
-    width: 1184px;
+    max-width: 1184px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .footer {
+    min-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+    align-content: flex-start;
+    gap: 48px;
+    min-width: 288px;
   }
 }
