--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -12,3 +12,14 @@
 .header__lang-link:first-of-type {
   text-decoration: underline;
 }
+
+.header__lang-link:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 1023px) {
+  .header__lang-link{
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
