--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -5,3 +5,10 @@
   background-size: cover;
   align-self: flex-start;
 }
+
+@media screen and (max-width: 1023px) {
+  .header__logo {
+    width: 142px;
+    height: 42px;
+  }
+}
