--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,11 +2,23 @@
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
-  width: calc(100% - (48px*2));
+  max-width: 1184px;
 }
 
-@media screen and (min-width: 1281px) {
+@media screen and (max-width: 1279px) {
   .header {
-    width: 1184px;
+    min-width: 928px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .header {
+    min-width: 720px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    min-width: 288px;
   }
 }
