--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,4 +5,13 @@
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
+  margin-bottom: 33px;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__text {
+    font-size: 16px;
+    line-height: 35px;
+    margin-bottom: 34px;
+  }
 }
