--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,4 +5,12 @@
   font-size: 54px;
   line-height: 58px;
   color: #FFFFFF;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width: 1023px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
 }
