--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,3 +9,12 @@
   margin: 0 auto 32px;
   width: 720px;
 }
+
+@media screen and (max-width: 767px) {
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    width: 288px;
+    margin: 0 auto 16px;
+  }
+}
