--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,3 +1,16 @@
 .lead {
-  max-width: 984px;
+  width: 984px;
+}
+
+@media screen and (max-width: 1279px) {
+  .lead {
+    width: calc(100% - (48px*2));
+    max-width: 984px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    width: 100%;
+  }
 }
