--- a/blocks/page/__cover/page__cover.css
+++ b/blocks/page/__cover/page__cover.css
@@ -1,3 +1,21 @@
 .page__cover {
   margin: 92px auto 0;
 }
+
+@media screen and (max-width: 1279px) {
+  .page__cover {
+    margin: 92px auto 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page__cover {
+    margin: 90px auto 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page__cover {
+    margin: 66px auto 0;
+  }
+}
