--- a/blocks/page/__footer/page__footer.css
+++ b/blocks/page/__footer/page__footer.css
@@ -1,3 +1,21 @@
 .page__footer {
   margin: 92px auto 24px;
 }
+
+@media screen and (max-width: 1279px) {
+  .page__footer {
+    margin: 92px 48px 24px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page__footer {
+    margin: 88px 24px 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page__footer {
+    margin: 64px 0 24px 16px;
+  }
+}
