--- a/blocks/page/__intro/page__intro.css
+++ b/blocks/page/__intro/page__intro.css
@@ -1,10 +1,21 @@
 .page__intro {
-  margin: 92px 0 0 148px;
-  width: 690px;
+  margin: 92px 0 0 calc((100% - 984px)/2);
 }
 
-@media screen and (min-width: 1281px) {
+@media screen and (max-width: 1279px) {
   .page__intro {
-    margin: 92px 0 0 calc((100% - 984px)/2);
+    margin: 92px 0 0 calc((100% - 928px)/2);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .page__intro {
+    margin: 88px 24px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .page__intro {
+    margin: 64px 16px 0;
   }
 }
