--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,12 +2,31 @@
   display: grid;
   grid-template-columns: repeat(4, minmax(min-content, max-content));
   justify-content: stretch;
-  width: calc(100% - (48px*2));
+  max-width: 1184px;
   gap: 16px;
 }
 
-@media screen and (min-width: 1281px) {
+@media screen and (max-width: 1279px) {
   .photo-grid {
-    width: 1184px;
+    grid-template-columns: repeat(3, minmax(min-content, max-content));
+    gap: 14px;
+    width: calc(100% - (48px*2));
+    max-width: 1184px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .photo-grid {
+    grid-template-columns: repeat(2, minmax(min-content, max-content));
+    gap: 16px;
+    width: calc(100% - (24px*2));
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .photo-grid {
+    grid-template-columns: repeat(1, minmax(min-content, max-content));
+    gap: 12px;
+    width: calc(100% - (16px*2));
   }
 }
