--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,3 +3,10 @@
   grid-row: 2/3;
   max-width: 100%;
 }
+
+@media screen and (max-width: 767px) {
+  .place__image {
+    grid-column: span 1;
+    grid-row: 3/4;
+  }
+}
