--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -5,3 +5,13 @@
   display: flex;
   flex-direction: column;
 }
+
+@media screen and (max-width: 767px) {
+  .place__paragraphs {
+    grid-row: 4/5;
+    grid-column: span 1;
+    min-width: 288px;
+    margin: 0 16px;
+    row-gap: 25px;
+  }
+}
