--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -5,3 +5,22 @@
   column-gap: 40px;
   row-gap: 48px;
 }
+
+@media screen and (max-width: 1279px) {
+  .place {
+    grid-template-columns: 440px minmax(min-content, max-content);
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .place {
+    grid-template-columns: 340px minmax(min-content, max-content);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .place {
+    grid-template-columns: 100%;
+    gap: 32px;
+  }
+}
