--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,13 +1,27 @@
 .places {
-  width: calc(100% - (148px*2));
+  width: 984px;
   display: flex;
   flex-direction: column;
   align-content: center;
   gap: 80px;
 }
 
-@media screen and (min-width: 1281px) {
+@media screen and (max-width: 1279px) {
   .places {
-    width: 984px;
+    width: calc(100% - (48px*2));
+    max-width: 984px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .places {
+    width: calc(100% - (24px*2));
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .places {
+    width: 100%;
+    min-width: 320px;
   }
 }
