Первое исправление кода после ревью

--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -6,8 +6,10 @@
   line-height: 22px;
   text-decoration-line: underline;
   color: #FFFFFF;
+  transition: opacity 0.5s linear;
 }
 
 .place__link:hover {
   cursor: pointer;
+  opacity: 0.6;
 }
