--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,8 +9,7 @@
 }
 
 @media screen and (max-width: 767px) {
-  .footer__link {
-    font-size: 14px;
+  .footer__copyright {
     line-height: 14px;
   }
 }
