--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,7 +1,7 @@
 .intro__list {
   font-family: 'Inter', serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 12px;
   line-height: 18px;
   color: #FFFFFF;
