--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,11 +1,12 @@
 .intro__text{
-  font-family: Inter;
+  font-family: 'Inter', serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 163%;
   color: #FFFFFF;
   margin-bottom: 33px;
+  margin-top: 0;
 }
 
 @media screen and (max-width: 1023px) {
