--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -6,9 +6,10 @@
   line-height: 58px;
   color: #FFFFFF;
   margin-bottom: 40px;
+  margin-top: 0;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 767px) {
   .intro__title {
     font-size: 32px;
     line-height: 35px;
