--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,5 +7,11 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin: 8px 0 0;
+  margin: 8px 0 0 24px;
+}
+
+@media screen and (max-width: 767px) {
+  .lead__caption{
+    margin: 8px 0 0 16px;
+  }
 }
