--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,9 +1,10 @@
 .place__url-heading {
-font-family: 'Inter', serif;
-font-style: normal;
-font-weight: normal;
-font-size: 12px;
-line-height: 12px;
-letter-spacing: 2px;
-color: #AAAAAA;
+  font-family: 'Inter', serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 2px;
+  color: #AAAAAA;
+  text-transform: uppercase;
 }
