--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -15,12 +15,13 @@
 @media screen and (max-width: 1023px) {
   .place {
     grid-template-columns: 340px minmax(min-content, max-content);
+    column-gap: 28px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .place {
     grid-template-columns: 100%;
-    gap: 32px;
+    row-gap: 32px;
   }
 }
