--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 767px) {
   .cover__subtitle {
-    margin: 16px auto 0;
+    margin: 0 auto 0;
     font-size: 14px;
     line-height: 16px;
     width: 288px;
