--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,6 +10,12 @@
   margin: 0 auto 64px;
 }
 
+@media screen and (max-width: 1279px) {
+  .lead__subtitle {
+    margin: 0 auto 56px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
