Работа над до 1279 отступы в place

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,6 +9,7 @@
 @media screen and (max-width: 1279px) {
   .place {
     grid-template-columns: 440px minmax(min-content, max-content);
+    column-gap: 32px;
   }
 }
 
