--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -10,6 +10,12 @@
   margin: 8px 0 0 24px;
 }
 
+@media screen and (max-width: 1279px) {
+  .lead__caption{
+    margin: 8px 0 0 0;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .lead__caption{
     margin: 8px 0 0 16px;
