--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -7,7 +7,7 @@
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #FFFFFF;
-  margin: 8px 0 0 24px;
+  margin: 8px 0 0 0;
 }
 
 @media screen and (max-width: 1279px) {
